<resources>
    <string name="app_name">Intern20Summer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nickname">NickName</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="edit_todo">Edit ToDo</string>
    <string name="todo_content">Todo content..</string>
    <string name="add_todo">Add ToDo</string>
    <string name="title_activity_main_to_do">MainToDoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="toast_please_insert">Please insert to do</string>
    <string name="toast_added">Added</string>
    <string name="toast_edited">Edited</string>
    <string name="toast_cancel">Canceled</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_to_do_main">ToDoMainActivity</string>
</resources>
