<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.asiantech.summer.fragment.LoginFragment">

    <EditText
        android:id="@+id/edUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:background="@color/cardview_light_background"
        android:hint="@string/username"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PrivateResource"
        android:inputType="" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:background="@color/cardview_light_background"
        android:hint="@string/password"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/edUserName"
        tools:ignore="PrivateResource" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/colorBlue"
        android:text="@string/login"
        android:textColor="@color/colorWhite"

        app:layout_constraintLeft_toLeftOf="@id/edPassword"
        app:layout_constraintRight_toRightOf="@id/edPassword"
        app:layout_constraintTop_toBottomOf="@id/edPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
