<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.asiantech.summer.fragment.RegisterFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="40dp"
        android:id="@+id/civAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:padding="10dp"
        android:background="@color/cardview_light_background"
        android:hint="@string/username"
        app:layout_constraintTop_toTopOf="@id/civAvatar"
        android:inputType="text"
        tools:ignore="PrivateResource" />

    <EditText
        android:id="@+id/edtNickName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:padding="10dp"
        android:background="@color/cardview_light_background"
        android:hint="@string/nickname"
        app:layout_constraintTop_toBottomOf="@id/edtUserName"
        android:autofillHints=""
        tools:ignore="PrivateResource" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:padding="10dp"
        android:background="@color/cardview_light_background"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/edtNickName"
        android:autofillHints=""
        android:importantForAutofill="no"
        tools:ignore="PrivateResource" />


    <Button
        android:id="@+id/btRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="15sp"
        android:background="@color/colorBlue"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="@id/edtPassword"
        app:layout_constraintRight_toRightOf="@id/edtPassword"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
