<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGrey"
        tools:context="com.asiantech.summer.fragment.RegisterFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civAvatarEdit"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:background="@color/cardview_light_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="PrivateResource" />

        <EditText
            android:id="@+id/edtUserNameEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="40dp"
            android:autofillHints=""
            android:background="@color/cardview_light_background"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="@id/civAvatarEdit"
            tools:ignore="PrivateResource" />

        <EditText
            android:id="@+id/edtNickNameEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="40dp"
            android:autofillHints=""
            android:background="@color/cardview_light_background"
            android:hint="@string/nickname"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/edtUserNameEdit"
            tools:ignore="PrivateResource" />

        <EditText
            android:id="@+id/edtPasswordEdit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="40dp"
            android:autofillHints=""
            android:background="@color/cardview_light_background"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/edtNickNameEdit"
            tools:ignore="PrivateResource,TextFields" />


        <Button
            android:id="@+id/btEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@color/colorBlue"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="@id/edtPasswordEdit"
            app:layout_constraintRight_toRightOf="@id/edtPasswordEdit"
            app:layout_constraintTop_toBottomOf="@id/edtPasswordEdit" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/btEditProfile" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
